Fix image text alignment css

--- a/assets/std-image-text/std-image-text.scss
+++ b/assets/std-image-text/std-image-text.scss
@@ -22,8 +22,6 @@
   }
 
   &.std-valign--center {
-    .std-image-text__cols {
-      align-items: center;
-    }
+    align-items: center;
   }
 }
